--- a/.github/workflows/build-to-main.yml
+++ b/.github/workflows/build-to-main.yml
@@ -12,6 +12,10 @@ permissions:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    env:
+      NODE_ENV: development
+      NPM_CONFIG_PRODUCTION: "false"
+      NPM_CONFIG_OMIT: ""
     steps:
       - name: Checkout main
         uses: actions/checkout@v4
@@ -27,11 +31,15 @@ jobs:
       - name: Install dependencies
         run: npm ci --include=dev
 
-      - name: Verify Vite is installed
-        run: npx vite --version
+      - name: Verify npm config and Vite
+        run: |
+          npm config get production
+          npm config get omit
+          npm ls vite --depth=0
+          npx vite --version
 
       - name: Build
-        run: npm run build
+        run: npx vite build
 
       - name: Add 404 fallback
         run: cp dist/index.html dist/404.html
