--- a/.github/workflows/build-to-main.yml
+++ b/.github/workflows/build-to-main.yml
@@ -12,10 +12,6 @@ permissions:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    env:
-      NODE_ENV: development
-      NPM_CONFIG_PRODUCTION: "false"
-      NPM_CONFIG_OMIT: ""
     steps:
       - name: Checkout main
         uses: actions/checkout@v4
@@ -29,17 +25,16 @@ jobs:
           cache: npm
 
       - name: Install dependencies
-        run: npm ci --include=dev
-
-      - name: Verify npm config and Vite
         run: |
-          npm config get production
-          npm config get omit
-          npm ls vite --depth=0 || true
-          npx vite --version
+          npm config delete production || true
+          npm config set omit ""
+          npm ci
+          test -f node_modules/vite/package.json
 
       - name: Build
-        run: npx vite build
+        env:
+          NODE_ENV: development
+        run: npm run build
 
       - name: Add 404 fallback
         run: cp dist/index.html dist/404.html
