fix(ci): avoid npm omit config crash in install step

--- a/.github/workflows/build-to-main.yml
+++ b/.github/workflows/build-to-main.yml
@@ -27,8 +27,8 @@ jobs:
       - name: Install dependencies
         run: |
           npm config delete production || true
-          npm config set omit ""
-          npm ci
+          npm config delete omit || true
+          npm ci --include=dev
           test -f node_modules/vite/package.json
 
       - name: Build
