--- a/.github/workflows/build-to-main.yml
+++ b/.github/workflows/build-to-main.yml
@@ -22,25 +22,17 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18.20.8'
-
-      - name: Use stable npm
-        run: |
-          npm install -g npm@10.9.4
-          npm -v
+          cache: npm
 
       - name: Install dependencies
+        env:
+          NPM_CONFIG_REGISTRY: https://registry.npmjs.org/
+          NPM_CONFIG_REPLACE_REGISTRY_HOST: always
         run: |
           set -euo pipefail
           node -v
           npm -v
-          npm config delete production || true
-          npm config delete omit || true
-          rm -rf ~/.npm/_cacache
-          if ! npm ci --include=dev --no-audit --no-fund; then
-            echo "npm ci failed, falling back to npm install"
-            rm -rf node_modules
-            npm install --include=dev --no-audit --no-fund
-          fi
+          npm ci --include=dev --no-audit --no-fund
           test -f node_modules/vite/package.json
 
       - name: Build
