--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "embla-carousel-react": "8.6.0",
     "input-otp": "1.4.2",
     "lucide-react": "0.487.0",
+    "marked": "^15.0.12",
     "motion": "12.23.24",
     "next-themes": "0.4.6",
     "react": "18.2.0",
